# DOREMUS_MCP

./: .gitignore  Dockerfile  ENDPOINT_GUIDE.md  README.md  client.py  cq.json  docker-compose.yml  langgraph.json  pyproject.toml  query_builder.py  requirements.txt  server.py  start.sh  test_server.py
.github/workflows/: evaluation.yml
ablation_studies/: run_tool_study.py
data/: cq.json  edges_stats.csv  graph.csv
data/competency_questions/: q001.rq  q002.rq  q003.rq  q004.rq  q005.rq  q006.rq  q007.rq  q008.rq  q009.rq  q010.rq  q011.rq  q012.rq  q013.rq  q014.rq  q015.rq  q016.rq  q017.rq  q018.rq  q019.rq  q020.rq  q021.rq  q022.rq  q023.rq  q024.rq  q025.rq  q026.rq  q027.rq  q028.rq  q029.rq  q030.rq  q031.rq  q032.rq  q033.rq  q034.rq  q035.rq  q036.rq  q037.rq  q038.rq
data/eval_dataset/: q001.rq  q008.rq  q009.rq  q010.rq  q011.rq  q012.rq  q014.rq  q015.rq  q016.rq  q018.rq  q020.rq  q021.rq  q024.rq  q027.rq  q029.rq  q032.rq  q033.rq  q036.rq  q043.rq  q048.rq  q052.rq  q062.rq
data/user_questions/: q001.rq  q002.rq  q003.rq  q004.rq  q005.rq  q006.rq  q007.rq  q008.rq  q009.rq  q010.rq  q011.rq  q012.rq  q013.rq  q014.rq  q015.rq  q016.rq  q017.rq  q018.rq  q019.rq  q020.rq  q021.rq  q022.rq  q023.rq  q024.rq  q025.rq  q026.rq  q027.rq
docs/: EXAMPLES.md  custom_kg_config.md
eval_dataset/: q002.rq  q005.rq  q013.rq  q015.rq  q016.rq  q018.rq  q019.rq  q023.rq  q025.rq  q026.rq  q028.rq  q030.rq  q032.rq  q033.rq  q035.rq  q051.rq  q053.rq  q055.rq  q057.rq  q059.rq  q064.rq
evaluators/: README.md  analyze_runs.py  client_geminiCLI.py  create_dataset.py  create_plots.py  export_human_readable.py  run_ablation_study.py  run_tool_study.py  test_gemini_dataset.py  test_query.py
src/analyze_graph_ontology/: README.md  analyze_graph.py
src/rdf_assistant/: doremus_assistant.py  prompts.py
src/rdf_assistant/eval/: doremus_dataset.py  split_dataset.py
src/scripts/: count_tool_instructions.py
src/server/: README.md  config.py  config_loader.py  find_paths.py  graph_schema_explorer.py  main.py  query_builder.py  query_container.py  server.py  template_parser.py  tool_sampling.py  tools_internal.py  utils.py
src/server/config/: server_config.yaml  strategies.yaml  tools.yaml
tests/: test_query.py  test_server.py
(+8 files in other folders)
