[tool.poetry]
name = "doremus-mcp-project"
version = "0.1.0"
description = "MCP Server and Evaluators for DOREMUS Knowledge Graph"
authors = [
    "Simone Fassio <simone.fassio@eurecom.fr>",
    "Dario Gosmar <dario.gosmar@eurecom.fr>"
]
readme = "README.md"
packages = [
    { include = "server", from = "src" },
    { include = "rdf_assistant", from = "src" },
    { include = "evaluators" },
]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies needed by both server and evaluators
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-mcp-adapters = "^0.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

# --- Group for Server-Only Dependencies ---
[tool.poetry.group.server]
optional = false

[tool.poetry.group.server.dependencies]
fastmcp = "^2.0.0"
uvicorn = "^0.27.0"
starlette = "^0.36.0"
fastapi = "^0.109.0"
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
mcp-use = "^1.0.0"

# --- Group for Evaluator/Client-Only Dependencies ---
[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
langchain-groq = "^0.2.0"
langchain-anthropic = "^0.3.0"
langgraph = "^0.2.0"
langgraph-cli = {extras = ["inmem"], version = "^0.1.0"}
pandas = "^2.2.0"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
html2text = "^2024.0.0"
rich = "^13.7.0"
langsmith = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"